working claims impl.

--- a/src/AspNetIdentity/Views/Manage/Index.cshtml
+++ b/src/AspNetIdentity/Views/Manage/Index.cshtml
@@ -9,6 +9,11 @@
 <div>
     <h4>Change your account settings</h4>
     <hr />
+
+    <div class="alert alert-success">
+        @Model.Status
+    </div>
+
     <dl class="dl-horizontal">
         <dt>Password:</dt>
         <dd>
